# Numera

./: CMakeLists.txt  LICENSE  README.md
Examples/: CMakeLists.txt  main.cpp  numbers.txt  numera_example
Numera/: CMakeLists.txt  FileDataLoader.cpp  FileDataLoader.h  IDataLoader.h  Numera.cpp  Numera.h  RandomValueGenerator.h
Numera/Core/: CSVTable.cpp  CSVTable.h  CsvData.h  DataSet.h  NumericSample.h  VectorData.h
Numera/RandomGenerator/: RandomValueGenerator.cpp
Numera/Sampling/: Sampling.cpp  Sampling.h
Numera/io/: CsvDataLoader.cpp  CsvDataLoader.h  FileDataLoader.cpp  FileDataLoader.h  IDataLoader.h
Numera/stats/: BasicStats.h  NonProbabilitySampling.h  ProbabilitySampling.h  Sampling.cpp  Sampling.h
Tests/: CMakeLists.txt  NumeraTests.cpp  numbers.txt
Tests/Core/: CSVTableTests.cpp  CSVTableTests.h  CsvDataTests.cpp  CsvDataTests.h  NumericSampleTests.cpp  NumericSampleTests.h  VectorDataTests.cpp  VectorDataTests.h
Tests/io/: CsvDataLoaderTests.cpp  CsvDataLoaderTests.h  FileDataLoaderTests.cpp  FileDataLoaderTests.h
Tests/stats/: BasicStatsTests.cpp  BasicStatsTests.h  NonProbabilitySamplingTests.cpp  NonProbabilitySamplingTests.h  ProbabilitySamplingTests.cpp  ProbabilitySamplingTests.h
examples/: CMakeLists.txt  main.cpp
numera/: CMakeLists.txt  Numera.cpp  Numera.h  numera.cpp  numera.h  randomValueGenerator.cpp  randomValueGenerator.h
numera/sampling/: Sampling.cpp  SimpleRandom.h  Stratified.h  Systematic.h  sampling.cpp  sampling.h
tests/: CMakeLists.txt  NumeraTests.cpp  numeraTests.cpp
